fixed sync mechanism
